Fixed icon alignment in Safari

--- a/src/site/static/scss/buttons.scss
+++ b/src/site/static/scss/buttons.scss
@@ -45,12 +45,11 @@
 }
 
 @mixin s($size) {
-	//font-size: $size;
+	
 	md-icon {
 		@include sized-obj($size);
 		max-width: $size;
 		font-size: $size;
-		margin: 0px;
 	}
 
 	md-icon + span {
@@ -60,12 +59,7 @@
 	button, a {
 		$padding-hor: $size / 5;
 		$padding-ver: $size / 2;
-		//@include sized-obj($size);
 		display: inline-flex;
-		//padding: $padding-ver;
-		//padding-left: $padding-hor;
-		//padding-right: $padding-hor + 4px; // +4px because the icon on the left has space and span on the right doesn't
-		//line-height: $padding-ver;
 		font-weight: normal;
 	}
 
